# omics_final

./: .gitignore  README.md  batch_correction.py  metrics.py  models.py  normalization.py  pipeline.py  pyproject.toml  qc.py  run_sc_pipeline.py
sc_pipeline/: __init__.py  models.py  pipeline.py  qc.py
