[project]
name = "sc-batchbench"
version = "0.1.0"
description = "Single-cell batch-correction benchmarking pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anndata",
  "matplotlib",
  "numpy",
  "pandas",
  "scanpy",
  "scikit-learn",
  "scipy",
  "seaborn",          # нужен для plot_metrics_heatmap
]

[project.optional-dependencies]
# Классические методы коррекции
integration = [
  "combat-seq",       # ComBat (pycombat)
]

# Deep learning методы
deep = [
  "scvi-tools",       # scVI + scANVI
]

# Foundation models
foundation = [
  "scgpt",            # scGPT zero-shot
  "geneformer",       # Geneformer zero-shot (pip install geneformer)
]

# Метрики
metrics = [
  "scib-metrics",
  "scib",
]

# Псевдобалк валидация
deseq = [
  "rpy2",             # для запуска DESeq2 из Python
]

# Всё сразу
all = [
  "sc-batchbench[integration,deep,foundation,metrics,deseq]",
]

[tool.uv]
default-groups = []
