[project]
name = "sc-batchbench"
version = "0.1.0"
description = "Single-cell batch-correction benchmarking pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anndata",
  "matplotlib",
  "numpy",
  "pandas",
  "scanpy",
  "scikit-learn",
  "scipy",
  "seaborn",          
]

[project.optional-dependencies]

integration = [
  "combat-seq",       # ComBat (pycombat)
]


deep = [
  "scvi-tools",       # scVI + scANVI
]


foundation = [
  "scgpt",            # scGPT zero-shot
  "geneformer",       # Geneformer zero-shot (pip install geneformer)
]


metrics = [
  "scib-metrics",
  "scib",
]


deseq = [
  "rpy2",             # for launch DESeq2 from Python
]


all = [
  "sc-batchbench[integration,deep,foundation,metrics,deseq]",
]

[tool.uv]
default-groups = []
